syntax = "proto3";

package guru.qa.grpc.rococo;

import "rococo-country.proto";

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo.grpc";
option java_outer_classname = "RococoMuseumProto";

service RococoMuseumService{
  rpc GetAllMuseums(AllMuseumsRequest) returns (AllMuseumsResponse){}
  rpc GetMuseumById(GetMuseumRequest) returns (Museum){}
  rpc AddMuseum(Museum) returns (Museum){}
  rpc UpdateMuseum(Museum) returns (Museum){}
}

message AllMuseumsRequest{
  int32 page = 1;
  int32 size = 2;
  string title = 3;
}

message AllMuseumsResponse{
  repeated Museum museum = 1;
  int64 total_count = 2;
}

message Museum {
  string id = 1;
  string title = 2;
  string description = 3;
  string photo = 4;
  Geo geo = 5;
}

message Geo{
  string city = 1;
  rococo.Country country = 2;
}

message GetMuseumRequest{
  string id = 1;
}
